@@ -40,45 +40,42 @@ class CreateOrderUseCaseTest {
 
     @Test
     void shouldCreateOrderSuccessfully() {
-        // Arrange
         String authorizationHeader = "Bearer token";
         int clientId = 1;
         Product product = new Product();
         product.setId(1);
         product.setPrice(10.0);
-        product.setPreparationTime(5);
+        product.setPreparationTime(10);
         product.setDescription("Burger");
 
         OrderItemRequest item = new OrderItemRequest();
         item.setProductId(1);
-        item.setQuantity(2);
+        item.setQuantity(1);
 
         OrderRequest orderRequest = new OrderRequest();
         orderRequest.setItems(List.of(item));
 
-
         when(authenticationPort.validateIdUser(authorizationHeader)).thenReturn(clientId);
-        when(productPort.findById(1)).thenReturn(product);
-        when(timeWaitingOrderQueueUseCase.execute(authorizationHeader)).thenReturn(10);
-        when(orderPort.save(Mockito.any(Order.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(productPort.findById(1)).thenReturn(product); // Mock product fetching
+        when(timeWaitingOrderQueueUseCase.execute(authorizationHeader)).thenReturn(10); // Mock waiting time
+        when(orderPort.save(Mockito.any(Order.class), eq(authorizationHeader))).thenAnswer(invocation -> invocation.getArgument(0)); // Mock save operation
 
-        // Act
         Order createdOrder = createOrderUseCase.createOrder(orderRequest, authorizationHeader);
 
-        // Assert
         assertNotNull(createdOrder);
         assertEquals(StatusOrder.WAITINGPAYMENT, createdOrder.getStatus());
-        assertEquals(20.0, createdOrder.getTotalPrice()); // 2 items * 10.0 each
-        assertEquals(20, createdOrder.getTimeWaitingOrder()); // 2 * 5 + 10
-        assertEquals(1, createdOrder.getOrderItemsList().size());
+        assertEquals(10.0, createdOrder.getTotalPrice(), 0.001);
+        assertEquals(20, createdOrder.getTimeWaitingOrder());
 
-        OrderItem orderItem = createdOrder.getOrderItemsList().get(0);
+        assertEquals(1, createdOrder.getOrderItemsList().size());
+        OrderItem orderItem = createdOrder.getOrderItemsList().getFirst();
         assertEquals(product.getDescription(), orderItem.getDescription());
-        assertEquals(10.0, orderItem.getTotalProductPrice());
+        assertEquals(10.0, orderItem.getTotalProductPrice(), 0.001);
 
         verify(authenticationPort).validateAuthorizationHeader(authorizationHeader);
         verify(authenticationPort).validateIdUser(authorizationHeader);
         verify(productPort).findById(1);
-        verify(orderPort).save(createdOrder);
+        verify(orderPort).save(createdOrder, authorizationHeader);
     }
+
 }
